--- a/portfolio-single-3.html
+++ b/portfolio-single-3.html
@@ -129,7 +129,7 @@
 
             <div class="col-md-10 mx-auto text-center">
               <h1 class="heading" data-aos="fade-up">Follow the Eyes</h1>
-              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Far far away, behind the word mountains, far from the countries.</h2>
+              <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Make the Eyes to Follow your Mouse!</h2>
             </div>
 
           </div>
