--- a/portfolio-single-2.html
+++ b/portfolio-single-2.html
@@ -207,7 +207,7 @@
                 </div>
                 <div class="col-md-6 pr-md-5">
                   <p>This Project is a PacMan Factory, go back to the 80's and have fun by randomly creating and adding PacMan figures to the DOM with ramdom speed and directions.</p>
-                  <p>See it in action <a href="">here</a>.</p>
+                  <p>See it in action <a href="https://xani-dev.github.io/MIT-Projects/PacMan-Factory/index.html" target="_blank">here</a>.</p>
                 </div>
                 <div class="col-md-6 pl-md-5">
                   <p>Press the Create PacMan button to add as many as you want and then press Start Game to see them moving all over your screen.</p>
