--- a/portfolio-single-3.html
+++ b/portfolio-single-3.html
@@ -167,7 +167,7 @@
                         <div class="detail-v1">
                           <span class="detail-label">Eyes Movement Project</span>
                           <p>This project is all about mouse movements. The Eyes of our pink friend will follow your mouse all over the place. It was created using Javascript, CSS & HTML. </p>
-                          <p>See it in action <a href="">here</a>.</p>
+                          <p>See it in action <a href="https://xani-dev.github.io/MIT-Projects/Eye-Movement/index.html" target="_blank">here</a>.</p>
                         </div>
                       </div>
 
