--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 											<li>
 												<a href="portfolio-single-3.html" target="_blank">Mouse Eye Movement</a>
 											</li>
-											<li>
+											<!-- <li>
 												<a href="">TBA</a>
 											</li>
 											<li>
 												<a href="">TBA</a>
-											</li>
+											</li> -->
 										</ul>
 									</li>
 									<li><a href="#about-section" class="nav-link">About</a></li>
@@ -412,8 +412,8 @@
 									<a href="https://www.linkedin.com/in/xani-gonzalez/" target="_blank"><i class="fab fa-linkedin-in"> </i></a>
 								</p>
 								<p class="gsap-reveal">
-									<a href="https://www.youtube.com/watch?v=5qap5aO4i9A" data-fancybox="gal" class="btn btn-outline-pill btn-custom-light"
-										>See my Video-Resume</a>
+									<a href="https://youtu.be/B4jQoKx8MkU" data-fancybox="gal" class="btn btn-outline-pill btn-custom-light"
+										>Watch: About-me Video</a>
 								</p>
 							</div>
 						</div>
