--- a/portfolio/eyemovement/index.html
+++ b/portfolio/eyemovement/index.html
@@ -35,6 +35,16 @@
   <link rel="icon" href="http://thepink.dev/images/favicon.png " type="image/x-icon">
 
   
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-H5KSTSKN9H"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-H5KSTSKN9H');
+	</script>
+	
 
   
 
@@ -166,8 +176,8 @@
             <div class="project-meta">
               <i class="ti-link"></i>
               <div class="ml-3">
-                <h4>Project Link</h4>
-                <p><a href="https://github.com/xani-dev/MIT-Projects/tree/main/Eye%20Movement">https://github.com/xani-dev/MIT-Projects/tree/main/Eye%20Movement</a></p>
+                <h4>Project Demo</h4>
+                <p><a href="https://xani-dev.github.io/MIT-Projects/Eye-Movement/index.html">https://xani-dev.github.io/MIT-Projects/Eye-Movement/index.html</a></p>
               </div>
             </div>
           </div>
@@ -178,7 +188,8 @@
         <div class="content"><h4 id="project-description">Project Description</h4>
 <p>This project is all about mouse movements.</p>
 <p>The Eyes of our pink friend will follow your mouse all over the place. It was created using Javascript, CSS &amp; HTML.</p>
-<p>See it in action <a href="https://github.com/xani-dev/MIT-Projects/tree/main/Eye%20Movement">here</a>.</p>
+<h4 id="project-repo">Project Repo</h4>
+<p>GitHub Repo <a href="https://github.com/xani-dev/MIT-Projects/tree/main/Eye-Movement">here</a>.</p>
 </div>
       </div>
     </div>
