--- a/portfolio/pacman-factory/index.html
+++ b/portfolio/pacman-factory/index.html
@@ -35,6 +35,16 @@
   <link rel="icon" href="http://thepink.dev/images/favicon.png " type="image/x-icon">
 
   
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-H5KSTSKN9H"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-H5KSTSKN9H');
+	</script>
+	
 
   
 
@@ -166,8 +176,8 @@
             <div class="project-meta">
               <i class="ti-link"></i>
               <div class="ml-3">
-                <h4>Project Link</h4>
-                <p><a href="https://github.com/xani-dev/MIT-Projects/tree/main/PacMan%20Factory">https://github.com/xani-dev/MIT-Projects/tree/main/PacMan%20Factory</a></p>
+                <h4>Project Demo</h4>
+                <p><a href="https://xani-dev.github.io/MIT-Projects/PacMan-Factory/index.html">https://xani-dev.github.io/MIT-Projects/PacMan-Factory/index.html</a></p>
               </div>
             </div>
           </div>
@@ -177,9 +187,10 @@
       <div class="col-lg-11">
         <div class="content"><h4 id="project-details">Project Details</h4>
 <p>This Project is a PacMan Factory, go back to the 80&rsquo;s and have fun by randomly creating and adding PacMan figures to the DOM with ramdom speed and directions.</p>
-<p>See it in action <a href="https://xani-dev.github.io/MIT-Projects/PacMan-Factory/index.html">here</a>.</p>
 <p>Press the Create PacMan button to add as many as you want and then press Start Game to see them moving all over your screen.</p>
 <p>This project was created using Javascript, HTML &amp; CSS.</p>
+<h4 id="project-repo">Project Repo</h4>
+<p>GitHub Repo <a href="https://github.com/xani-dev/MIT-Projects/tree/main/PacMan-Factory">here</a>.</p>
 </div>
       </div>
     </div>
