--- a/portfolio/real-time-bus-tracker/index.html
+++ b/portfolio/real-time-bus-tracker/index.html
@@ -35,6 +35,16 @@
   <link rel="icon" href="http://thepink.dev/images/favicon.png " type="image/x-icon">
 
   
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-H5KSTSKN9H"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-H5KSTSKN9H');
+	</script>
+	
 
   
 
@@ -166,7 +176,7 @@
             <div class="project-meta">
               <i class="ti-link"></i>
               <div class="ml-3">
-                <h4>Project Link</h4>
+                <h4>Project Demo</h4>
                 <p><a href="https://xani-dev.github.io/MIT-Projects/Real-Time-Bus-Tracker/index.html">https://xani-dev.github.io/MIT-Projects/Real-Time-Bus-Tracker/index.html</a></p>
               </div>
             </div>
@@ -177,8 +187,10 @@
       <div class="col-lg-11">
         <div class="content"><h4 id="project-description">Project Description</h4>
 <p>This project provides a visual real-time tracking display of the Route #1 of Boston, running between <a href="https://www.mbta.com/schedules/1/line">Harvard and Nubian</a>.</p>
-<p>See it in action <a href="https://xani-dev.github.io/MIT-Projects/Real-Time-Bus-Tracker/index.html">here</a>. Remember you&rsquo;ll need to add your MapBox Key to be able to display your map.</p>
+<p>See it in action <a href="https://xani-dev.github.io/MIT-Projects/Real-Time-Bus-Tracker/index.html">here</a>. <em>(Remember you&rsquo;ll need to add your MapBox Key to be able to display your map.)</em></p>
 <p>Displays a colored set of markers showing all the buses running this route in real time. Info can also be updated by pressing the button located on the top right corner, if needed.</p>
+<h4 id="project-repo">Project Repo</h4>
+<p>GitHub Repo <a href="https://github.com/xani-dev/MIT-Projects/tree/main/Real-Time-Bus-Tracker">here</a>.</p>
 </div>
       </div>
     </div>
