Adding Projects to Portfolio

--- a/portfolio/pacman-factory/index.html
+++ b/portfolio/pacman-factory/index.html
@@ -167,7 +167,7 @@
               <i class="ti-folder"></i>
               <div class="ml-3">
                 <h4>Categories</h4>
-                <p>Javascript, HTML</p>
+                <p>Javascript</p>
               </div>
             </div>
           </div>
