--- a/about/index.html
+++ b/about/index.html
@@ -153,13 +153,15 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <h3 id="hi-there">Hi, there!</h3>
+        <h2 id="hi-there">Hi, there!</h2>
 <p>Hello, I am Xani, and I am currently embarking on a new journey as a Full Stack Web Developer to expand my career as a Multimedia Engineer to the amazing world of Software Development by becoming a MERN full-stack dev.</p>
 <p>So far, my career path has built on me a dynamic blend of Digital Marketer and Program Manager in the Tech industry, but I have always been curious about Software development, so, becoming a Web Developer feels like a natural next step to bring my career to another level.</p>
 <p>Always learning and looking for my next challenge, I am taking the leap and hoping this journey not only boosts my career but also I’m on a mission to inspire some other ladies around the globe, to truly believe they are capable of amazing things in the Software Development Universe.</p>
 <blockquote>
 <p>&hellip;because the joy of life is about challenging yourself, learning to do what you couldn&rsquo;t do before, and discovering your full potential</p>
 </blockquote>
+<h3 id="stuff-i-love">Stuff I love:</h3>
+<h4 id="-----">🗽 👩‍💻 🐶 🏃‍♀️ 📚 ✈️</h4>
 
       </div>
       <div class="col-md-4 text-center drag-lg-top">
