Adding Reataurant App

--- a/portfolio/running-log-app/index.html
+++ b/portfolio/running-log-app/index.html
@@ -194,7 +194,7 @@
               <i class="ti-link"></i>
               <div class="ml-3">
                 <h4>Project Demo</h4>
-                <p><a href="https://xani-dev.github.io">https://xani-dev.github.io</a></p>
+                <p><a href="https://github.com/xani-dev/xg-runs#demo">https://github.com/xani-dev/xg-runs#demo</a></p>
               </div>
             </div>
           </div>
