Adding Restaurant App Live

--- a/portfolio/hangman-game/index.html
+++ b/portfolio/hangman-game/index.html
@@ -205,7 +205,7 @@
         <div class="content"><h4 id="project-description">Project Description</h4>
 <p>A fun mini Javascript project.</p>
 <p>This project was built purely with JS.</p>
-<h5 id="what-it-does">What it does?</h5>
+<h5 id="what-does-it-do">What does it do?</h5>
 <ul>
 <li>Picks a random word.</li>
 <li>Takes the player’s guess.</li>
