Adding Expense Tracker App

--- a/portfolio/restaurant-app/index.html
+++ b/portfolio/restaurant-app/index.html
@@ -184,7 +184,7 @@
               <i class="ti-folder"></i>
               <div class="ml-3">
                 <h4>Categories</h4>
-                <p>Graph ql, express, react, strapi, stripe api, javascript</p>
+                <p>Graphql, express, react, strapi, stripe, javascript</p>
               </div>
             </div>
           </div>
